--- a/.gitignore
+++ b/.gitignore
@@ -76,11 +76,6 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
-.env
-.env.test
-.env*.local
-
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
@@ -115,5 +110,12 @@ dist
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
+
+#idea
+.idea/
+*.iml
+
+#vscode
+.vscode
 
 # End of https://www.toptal.com/developers/gitignore/api/node
