--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "pg": "^8.6.0"
+    "pg": "^8.6.0",
+    "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+    "node-fetch": "^2.6.1"
   }
 }
